# examples

autotools/existing_project/: Makefile.in  README  aclocal.m4  configure  configure.ac  sample_cpp.cpp
autotools/existingproject_mpi/: Makefile.am  Makefile.in  README  configure  configure.ac
autotools/existingproject_mpi/.deps/: autotools_test_c.Po  autotools_test_cpp.Po
autotools/new_project/: Makefile.am  README  configure.ac  sample_c.c  sample_cpp.cpp  sample_fortran.f90
autotools/newproject_mpi/: README  autotools_test_c.c  autotools_test_cpp.cpp  autotools_test_fortran.f90  configure.ac
cmake/MPI_cmake_projects/: README
cmake/MPI_cmake_projects/MPI_C/: CMakeLists.txt  MPI.c
cmake/MPI_cmake_projects/MPI_CPP/: CMakeLists.txt  MPI.cpp
cmake/MPI_cmake_projects/MPI_Fortran/: CMakeLists.txt  MPI.f90
cmake/cmake_projects/: README
cmake/cmake_projects/C/: CMakeLists.txt  sample.c
cmake/cmake_projects/CPP/: CMakeLists.txt  sample.cpp
cmake/cmake_projects/Fortran/: CMakeLists.txt  sample.f90
