AC_INIT([testmpi], [0.1], [veos@sxarr.jp.nec.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_SRCDIR([autotools_test_c.c])
AC_CONFIG_HEADERS([config.h])
# Checks for programs.
AC_PROG_CC([mpicc])
AC_PROG_CXX([mpic++])
AC_PROG_FC([mpifort])
AM_PROG_AR
AC_CANONICAL_HOST
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([Makefile
])
AC_OUTPUT
